[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rebar-algorithm"
version = "0.1.0"
description = "Rebar detection and analysis pipeline: SAM segmentation, RANSAC plane extraction, YOLO knot detection, line fitting, and 3D spatial analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
    "Pillow>=10.0",
    "requests>=2.31",
    "loguru>=0.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]
notebook = [
    "jupyter",
    "matplotlib",
]

[project.scripts]
rebar-demo = "rebar_algorithm.cli:main"
rebar-gui = "rebar_algorithm.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
